<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_safetylegal_activity_loading">Loading\u2026</string>
    <string name="app_name">TaskManager</string>
    <string name="running">Running</string>
    <string name="installed">Installed</string>
    <string name="memory_info" translatable="false">RAM</string>
    <string name="used_ram">Used RAM</string>
    <string name="free_ram">Free RAM</string>
    <string name="total_ram">Total RAM</string>
    <string name="percentage"><xliff:g id="number" example="30">%d</xliff:g>%%</string>
    <string name="running_app">running applications</string>
    <string name="switch_error">"Couldn't switch to the process , because it has no interface!"</string>
    <string name="no_applications">No apps.</string>
    <string name="disabled">Disabled</string>
    <string name="no_running_services">Nothing running.</string>
    <string name="sort_order_alpha">Sort by name</string>
    <string name="sort_order_size">Sort by size</string>
</resources>
