<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2010 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/system_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <RelativeLayout
                android:id="@+id/progress_info"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                style="?android:attr/listSeparatorTextViewStyle" >
                   <TextView
                        android:id="@+id/precent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="5dip"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                   <ProgressBar
                        android:id="@android:id/progress"
                        android:layout_width="match_parent"
                        android:layout_height="12dip"
                        android:layout_toLeftOf="@id/precent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:layout_marginTop="4dip"
                        android:paddingRight="10dip"
                        android:max="100"
                        android:progressDrawable="@drawable/data_usage_bar"
                        style="?android:attr/progressBarStyleHorizontal" />
           </RelativeLayout>
           <RelativeLayout
                android:id="@+id/used_info"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_below="@id/progress_info"
                style="?android:attr/listSeparatorTextViewStyle" >
                   <TextView
                        android:id="@+id/used_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/used_ram"
                        android:singleLine="true"
                        android:requiresFadingEdge="horizontal"
                        android:ellipsize="none"/>
                   <TextView
                        android:id="@+id/used_ram_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/used_label"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/used_ram"/>
            </RelativeLayout>
           <RelativeLayout
                android:id="@+id/free_info"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_below="@id/used_info"
                style="?android:attr/listSeparatorTextViewStyle" >
                   <TextView
                        android:id="@+id/free_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/free_ram"
                        android:singleLine="true"
                        android:requiresFadingEdge="horizontal"
                        android:ellipsize="none"/>
                   <TextView
                        android:id="@+id/free_ram_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/free_label"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/free_ram"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/total_info"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_below="@id/free_info"
                style="?android:attr/listSeparatorTextViewStyle" >
                   <TextView
                        android:id="@+id/total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/total_ram"
                        android:singleLine="true"
                        android:requiresFadingEdge="horizontal"
                        android:ellipsize="none"/>
                   <TextView
                        android:id="@+id/total_ram_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_label"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/total_ram"/>
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
